[package]
name = "terminal-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
futures = "0.3.30"
itertools = "0.13.0"
nalgebra-glm = "0.18.0"
russh = "0.45.0"
russh-keys = "0.45.0"
tobj = "4.0.2"
tokio = { version = "1.39.3", features = ["full"] }
